k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vendor-ingress
  namespace: vendor
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:286757679229:certificate/arn:aws:acm:ap-south-1:286757679229:certificate/bb21a336-f1a4-4c64-bb89-68c2b32baf9a
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  rules:
    - host: caasdiglobal.in
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: vendor-backend
                port:
                  number: 5001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vendor-frontend
                port:
                  number: 80
